Fixed footer text readability

--- a/css/photography.css
+++ b/css/photography.css
@@ -18,7 +18,7 @@ body {
     -webkit-backdrop-filter: blur(10px);   
   }
 
-  img {
+  img, .tz-gallery {
       pointer-events: none;
   }
 
